[project]
name = "aula08-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Jennifer Maia",email = "jen_maia@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandera (>=0.24.0,<0.25.0)",
    "pandas (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
